<resources>

    <!--    /**-->
    <!--    * Smart Building-->
    <!--    * https://github.com/MofifoluwaLekeAkinrowo3651/SmartBuilding-->
    <!--    * Created on 25-SEP-2021.-->
    <!--    * Created by : Team greenOps : Mofifoluwa Leke-Akinrowo (N01343651), Andrew Fraser(N01309442), Bibek Dhakal(N01419953)-->
    <!--    */-->

    <string name="app_name">Smart Building</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="events">EVENTS</string>
    <string name="open">open</string>
    <string name="doorOpen">DOOR IS OPEN</string>
    <string name="doorClose">DOOR IS CLOSED</string>
    <string name="on">ON</string>
    <string name="fireAlarmOn">FIRE ALARM IS ON</string>
    <string name="fireAlarmOff">FIRE ALARM IS OFF</string>
    <string name="dining">Dining</string>
    <string name="bathroom">Bathroom</string>
    <string name="demo_content">Finding easier methods to monitor and control your electricity usage and keeping our Earth green!</string>
    <string name="demo_title">Smart Building</string>
    <string name="finish">Finish</string>
    <string name="forgot_password">\" Forgot Password ?\"</string>
    <string name="login">Login</string>
    <string name="hi_user">Hi, User</string>
    <string name="welcome_to_your_home">Welcome to your home</string>
    <string name="bedroom">BedRoom Lights</string>
    <string name="temp">TEMP</string>
    <string name="humid">HUMID</string>
    <string name="key_upload_quality" translatable="false">key_upload_quality</string>
    <string name="set_off_time" translatable="false">Set Off-Time</string>
    <string name="limit_data_usage">limit_data_usage</string>
    <string name="data_mgt">Data Usage Management</string>
    <string name="prefs_restricted_mode">prefs_restricted_mode</string>
    <string name="restricted_mode">Restricted Mode prevents any power changes.</string>
    <string name="restricted_mode_description">Restricted Mode</string>
    <string name="exit_msg1">Do you want to exit?</string>
    <string name="exit">Yes</string>
    <string name="stay">No</string>
    <string name="user_name">User Name</string>
    <string name="person">person</string>
    <string name="demo_content2">Together we can save and make Earth greener!</string>
    <string name="bed_room">Bed Room</string>
    <string name="item_1">Runtime Func</string>
    <string name="user_review" translatable="false">User Review</string>
    <string name="item_3" translatable="false">Item 3</string>
    <string name="item_4" translatable="false">Item 4</string>
    <string name="portrait_lock">Portrait Lock</string>
    <string name="account">Account</string>
    <string name="sync_option">Sync Option</string>
    <string name="help_and_support">Help and Support</string>
    <string name="profile">Profile</string>
    <string name="solarPanels">Fire|Smoke Detector</string>
    <string name="lockDoord">Security Locks</string>
    <string name="hallway">Hallway Lights</string>
    <string name="kitchen">Kitchen Lights</string>
    <!--    <string name="bedroom">BedRoom</string>-->
    <string name="username">\"Email: \"</string>
    <string name="pass">\" Password: \"</string>
    <string name="grant">Permission GRANTED</string>
    <string name="msg1">Permission Required!</string>
    <string name="msg2">Permission for functionality is required</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deny">Permission DENIED</string>
    <string name="wrongLogin">Your Username or your Password is incorrect. Please enter again</string>
    <string name="wrongLoginTitle">Incorrect Username or Password</string>
    <string name="password">Password</string>
    <string name="google_login">Google Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="switch_language">Switch Language</string>
    <string name="web_client_id">1097759153378-opgaggv2srm3jti1ec8h09qmmca19hv4.apps.googleusercontent.com</string>
    <string name="review">User Review:</string>
    <string name="submit">SUBMIT</string>
    <string name="user_rating">your selected rating will appear here</string>
    <string name="phone_num">Phone #:</string>
    <string name="name">Name:</string>
    <string name="email">E-mail:</string>
    <string name="comments">Additional Comments:</string>
    <string name="yourRating">Your selected rating is: </string>
    <string name="user">username</string>
    <string name="greet">Hi </string>
    <string name="failedMsg">Log out failed</string>
    <string name="pass1">passwords</string>
    <string name="successMsg">Sign-in Successful</string>
    <string name="loginMsg1">Login Unsuccessful</string>
    <string name="loginMsg">\"Login Unsuccessful. \"</string>
    <string name="msg6">\"Success \"</string>
    <string name="successLogin">Login successful</string>
    <string name="notiftitle">CENG322</string>
    <string name="notiftext">greenOps SmartBuilding Notification</string>
    <string name="channelname">Notification</string>
    <string name="builderid">Notification</string>
    <string name="prefname">checkbox</string>
    <string name="usernull">onAuthStateChanged:signed_in:</string>
    <string name="userelse">onAuthStateChanged:signed_out</string>
    <string name="sharedprefname">checkbox</string>
    <string name="remember">remember</string>
    <string name="checkbox">checkbox</string>
    <string name="dialogtitle">Login</string>
    <string name="dialogmessage">Logging in...</string>
    <string name="help">Help and Support</string>
    <string name="support">Help_Support</string>
    <string name="register_logo">logo</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="areYouSure">Are you sure you want to submit?</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="no">NO</string>
    <string name="commentString">\nUser comment: </string>
    <string name="logout">Logout</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="potrait">Portrait Locked</string>
    <string name="url">https://www.iotacommunications.com/blog/smart-building/</string>
    <string name="user1">User: </string>
    <string name="email1">E-mail: </string>
    <string name="phone1" translatable="false">Phone:</string>
    <string name="NoRegistration">You are not Registered! Try again</string>
    <string name="RegistrattionSuccess">You are successfully Registered</string>
    <string name="EmptyEmail">Email is empty</string>
    <string name="InvalidEmail">Enter the valid email</string>
    <string name="InvalidPass">Enter the valid password</string>
    <string name="EmptyPass">Password is empty</string>
    <string name="PassLength">Length should be at least 8 characters</string>
    <string name="un">User Name: </string>
    <string name="Email" translatable="false">Email: </string>
    <string name="Phone">Phone: </string>
    <string name="enterRating">Please enter a rating</string>
    <string name="enterComment">Please enter comments</string>
    <string name="enterName">Please enter your full name</string>
    <string name="enterPhone">Please enter your phone number</string>
    <string name="enterEmail">Please enter your email</string>
    <string name="error">ERROR</string>
    <string name="reviewSent">Review Sent. Thank you!</string>

    <string name="UID" translatable="false">User ID: </string>

</resources>
