<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/reg_logo"
        android:layout_width="166dp"
        android:layout_height="149dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/register_logo" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="316dp"
        android:layout_height="42dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="315dp"
        android:layout_height="61dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="248dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/conf_pass"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="168dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="112dp"
        android:background="@color/light_green"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/reg_num"
        android:layout_width="318dp"
        android:layout_height="49dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_fname"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="248dp"
        android:ems="10"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>