<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EEEEEE"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.greenops.it.smartbuilding.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/bg_2" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/whitesqr"
                android:elevation="2dp"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@drawable/logo" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Login"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <View
                android:layout_width="40dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/gradient_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_edittxt"
            android:padding="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_user" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:background="#CACACA" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_edittxt"
                android:padding="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ic_password" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:background="#CACACA" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor" />

            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:textStyle="normal" />

        <CheckBox
            android:id="@+id/rememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/remember_me"
            android:textSize="14sp"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient_bg"
            android:onClick="onLoginClicked"
            android:paddingLeft="100dp"
            android:paddingTop="10dp"
            android:paddingRight="100dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/GoogleSignin"
            android:layout_width="136dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:text="@string/google_login"
            />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>