<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ca.greenops.it.smartbuilding.ReviewActivity">

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8BC34A"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.916" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="305dp"
        android:layout_height="484dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="187dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="272dp"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="168dp"
            android:numStars="4"
            android:stepSize=".5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.66"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="164dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="109dp"
            android:layout_marginBottom="341dp"
            android:autofillHints="@string/name"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.199"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.196" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="199dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="141dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="276dp"
            android:autofillHints="@string/phone_num"
            android:ems="10"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.273"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.29" />

        <EditText
            android:id="@+id/email"
            android:layout_width="202dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="38dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="213dp"
            android:autofillHints="@string/email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.273"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.379" />

        <TextView
            android:id="@+id/ratingView"
            android:layout_width="160dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="61dp"
            android:layout_marginTop="417dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="6dp"
            android:text="@string/user_rating"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="216dp"
            android:layout_height="92dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="323dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="69dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/comments"
            android:inputType="textMultiLine"
            android:minLines="6" />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.127" />

    <RelativeLayout
        android:layout_width="413dp"
        android:layout_height="115dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_2" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="107dp"
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            android:background="@drawable/whitesqr"
            android:elevation="2dp"
            android:padding="20dp">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="58dp"
                android:layout_height="54dp"
                android:background="@drawable/logo" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>